// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: PageLayout CenteredContent renders 1`] = `
<Fragment>
  <h2
    id="centered-content"
  >
    Centered content
  </h2>
  <p>
    For a centered layout use 
    <CodeTags
      code=".container"
      type="secondary"
    />
    , it has built in breakpoints and will switch to full-width if the screen size is small enough (see 
    <Link
      to="/core/grid"
    >
      grid
    </Link>
    ). When the content is centered it will require 
    <Link
      to="/utilities/borders"
    >
      borders
    </Link>
     on the right and left side. To make your topbar fill the page horizontally you will have to wrap it in a 
    <CodeTags
      code=".row"
      type="secondary"
    />
     and 
    <CodeTags
      code=".container-fluid"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <header>
          Topbar component...
        </header>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-auto"
        >
          Sidebar component...
        </div>
        <main
          className="col main-content border-left border-right"
        >
          Main content things...
        </main>
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: PageLayout FullWidth renders 1`] = `
<Fragment>
  <h2
    id="full-width"
  >
    Full width page
  </h2>
  <p>
    To use a full width layout use a combination of grid and the 
    <CodeTags
      code=".main-content"
      type="secondary"
    />
     class. 
    <CodeTags
      code=".main-content"
      type="secondary"
    />
     has a white background and some padding. For a full width layout use 
    <CodeTags
      code=".border-left"
      type="secondary"
    />
     to clearly separate the sidebar and the main content. See 
    <Link
      to="/utilities/borders"
    >
      borders
    </Link>
     docs for more information.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <header>
          Topbar component...
        </header>
      </div>
      <div
        className="row"
      >
        <div
          className="col-auto"
        >
          Sidebar component...
        </div>
        <main
          className="col main-content border-left"
        >
          Main content things...
        </main>
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: PageLayout renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use grid with our 
    <CodeTags
      code=".main-content"
      type="secondary"
    />
     class to use a variety of page layouts. As we have a mobile first approach we only use 1rem as base padding for our 
    <CodeTags
      code=".main-content"
      type="secondary"
    />
     class. Use the 
    <Link
      to="/utilities/spacing"
    >
      spacing
    </Link>
     classes to customize padding to fit your needs.
  </p>
  <FullWidth />
  <CenteredContent />
</DocContainer>
`;
